--- a/src/app/pages/components/sections/about-me/about-me.component.scss
+++ b/src/app/pages/components/sections/about-me/about-me.component.scss
@@ -100,7 +100,7 @@
       color: var(--background--dark-grey);
     }
     &__downloadCV:hover {
-      box-shadow: 0 0 15px red;
+      background-color: red;
     }
   }
 
