--- a/src/app/pages/components/sections/studies/studies.component.html
+++ b/src/app/pages/components/sections/studies/studies.component.html
@@ -5,10 +5,11 @@
   <div class="main-studies__container-studies">
     <div class="main-studies__container-studies__container-item" *ngFor="let achievement of studies.achievements">
       <div class="main-studies__container-studies__container-item__point"></div>
+      <!-- <div class="main-studies__container-studies__container-item__line"></div> -->
       <div class="main-studies__container-studies__container-item__text">{{achievement}}</div>
     </div>
-    <div class="main-studies__container-studies__container-img">
+    <!-- <div class="main-studies__container-studies__container-img">
       <img class="main-studies__container-studies__container-img__img" src="../../../../../assets/img/grado-removebg-preview.png"/>
-    </div>
+    </div> -->
   </div>
 </div>
