--- a/src/app/pages/components/sections/projects/projects.component.scss
+++ b/src/app/pages/components/sections/projects/projects.component.scss
@@ -1,3 +1,12 @@
+
+a{
+  text-decoration: none;
+}
+
+p{
+  margin: 0;
+  padding: 0;
+}
 .main-section3 {
   max-width: 75%;
   height: max-content;
@@ -10,9 +19,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
+    justify-content: center;
+    gap: 2rem;
     &__card-project {
-      width: 32%;
+      width: 35%;
       border: 2px solid gray;
       border-radius: 12px;
       display: flex;
@@ -37,7 +47,7 @@
           border-radius: 12px 12px 0 0;
           &__img-project {
             max-width: 12rem;
-            border-radius: 12px 0px 12px 0px;
+            border-radius: 12px  12px ;
           }
         }
       }
