--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,7 @@ body {
   --color-black: #000;
   --grey-modal: grey;
   --bockmark-option:rgb(55, 55, 55, 1);
-  --background-gradient-dark: linear-gradient(90deg, rgba(48,48,48,1) 0%, rgba(13,13,13,1) 15%, rgba(0,0,0,1) 50%, rgba(13,13,13,1) 85%, rgba(48,48,48,1) 100%);
+  --background-gradient-dark: black;
 }
 
 .light {
