--- a/src/app/pages/components/modal-contact/modal-contact.component.html
+++ b/src/app/pages/components/modal-contact/modal-contact.component.html
@@ -1,7 +1,10 @@
 <div class="modal">
   <div class="modal__sup">
-    <mat-icon class="modal__sup__icon">contacts</mat-icon>
-    <div class="modal__sup__title">Contact Information</div>
+    <div class="modal__sup__sup-left">
+      <mat-icon class="modal__sup__icon">contacts</mat-icon>
+      <div class="modal__sup__title">Contact Information</div>
+    </div>
+    <mat-icon class="modal__sup__iconX" (click)="closeModal()">close</mat-icon>
   </div>
   <div class="modal__body">
     <div class="modal__body__body-left">
