--- a/src/app/pages/components/modal-contact/modal-contact.component.scss
+++ b/src/app/pages/components/modal-contact/modal-contact.component.scss
@@ -35,6 +35,12 @@ a:active {
     border-bottom: 2px solid var(--white);
     display: flex;
     user-select: none;
+    justify-content: space-between;
+    &__sup-left{
+      display: flex;
+      flex-direction: row;
+      gap: 5px;
+    }
     &__title {
       font-size: 1.5rem;
       font-weight: 700;
@@ -44,6 +50,13 @@ a:active {
       display: flex;
       color: var(--white);
       vertical-align: bottom;
+    }
+    &__iconX {
+      display: flex;
+      color: var(--white);
+      vertical-align: bottom;
+      cursor: pointer;
+      user-select: none;
     }
   }
   &__body {
@@ -104,10 +117,14 @@ a:active {
     display: none;
   }
 }
-@media (max-width: 430px) {
+@media (max-width: 470px) {
   .modal__sup__title {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
+}
+
+@media (max-width: 430px) {
+
   .modal__body__body-left__input__text {
     font-size: 10px;
   }
