--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,8 +37,8 @@ body {
   --color-button: #fdffff;
   --color-black: #000;
   --grey-modal: grey;
-  --bockmark-option:rgb(55, 55, 55, 1);
-  --background-gradient-dark: linear-gradient(90deg, rgba(48,48,48,1) 0%, rgba(13,13,13,1) 15%, rgba(0,0,0,1) 50%, rgba(13,13,13,1) 85%, rgba(48,48,48,1) 100%);
+  background: rgb(112,112,112);
+background: linear-gradient(180deg, rgba(112,112,112,1) 0%, rgba(0,0,0,1) 46%);
 }
 
 .light {
